--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Urbanist, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
 html,
@@ -33,6 +33,7 @@ h2 {
   gap: 10px;
   transition: background 0.3s ease-in-out;
   z-index: 99999999;
+  background-color: black;
 }
 
 .hamburger-container:hover {
@@ -64,6 +65,12 @@ h2 {
   transform: translateY(-13px) rotate(-45deg);
   transition: transform 0.3s;
   background-color: #fff;
+}
+
+@media screen and (max-width: 400px) {
+  .hamburger-container {
+    right: 20px;
+  }
 }
 
 /* MENU EXPANDED STYLES */
@@ -121,29 +128,16 @@ h2 {
   transition: 0.3s ease-in;
 }
 
-/* HEADER */
+/*** HEADER STYLES ***/
 .header-section {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
   background-image: url("images/black-texture-background.jpg");
+  background-color: rgba(0, 0, 0, 1);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-}
-
-@media screen and (max-width: 400px) {
-  .header-section {
-    background-attachment: scroll;
-  }
-
-  .menu-expanded img {
-    width: 250px;
-  }
+  background-attachment: fixed;
+  height: 100vh;
+  position: relative;
 }
 
 .logo {
@@ -162,6 +156,21 @@ h2 {
   z-index: 55;
   animation: logoFadeIn 1.2s linear;
 }
+
+.header-content img {
+  width: 100%;
+}
+
+@media screen and (max-width: 400px) {
+  .header-section {
+    background-attachment: scroll;
+  }
+
+  .menu-expanded img {
+    width: 250px;
+  }
+}
+
 
 @keyframes logoFadeIn {
   from {
@@ -238,7 +247,7 @@ h2 {
 }
 
 .latest-news-card {
-  border-radius: 8px;
+  border-radius: 2px;
   padding: 20px;
   flex-grow: 0;
   flex-basis: 30%;
@@ -618,7 +627,7 @@ h2 {
 .next-button {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+ 
   background: #fff;
   border: none;
   cursor: pointer;
