--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ h2 {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  background-color: transparent;
 }
 
 .snake-container img {
