--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); */
+/* @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Oxanium:wght@200..800&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: Kdam Thmor Pro, Helvetica, Arial, sans-serif;
 }
 
 html,
@@ -17,6 +19,7 @@ body {
 
 h2 {
   font-size: 3rem;
+  text-transform: uppercase;
 }
 
 /*** HAMBURGER STYLES ***/
@@ -67,7 +70,7 @@ h2 {
   background-color: #fff;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .hamburger-container {
     right: 20px;
   }
@@ -196,7 +199,7 @@ h2 {
   width: 100%;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .header-section {
     background-attachment: scroll;
   }
@@ -339,7 +342,7 @@ h2 {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   #latest-news-section {
     background-attachment: scroll;
   }
@@ -397,7 +400,7 @@ h2 {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   #about-section {
     background-attachment: scroll;
   }
@@ -582,7 +585,7 @@ h2 {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .release-card {
     flex-basis: 100%;
   }
@@ -619,7 +622,7 @@ h2 {
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   #merch-section {
     background-attachment: scroll;
   }
@@ -682,7 +685,7 @@ h2 {
   right: 10px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .carousel-container {
     /* padding: 0 16px; */
     overflow: scroll;
@@ -744,7 +747,7 @@ h2 {
   flex-direction: column;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .contact-container form {
     width: 100%;
   }
