--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h2 {
 
 /*** HEADER STYLES ***/
 .header-section {
-  background-image: url("images/black-texture-background.jpg");
+  background-image: url("images/tom-black-texture-background.jpg");
   background-color: rgba(0, 0, 0, 1);
   background-position: center;
   background-size: cover;
@@ -530,7 +530,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("images/tree-root-background.jpg");
+  background-image: url("images/chip-background.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -577,6 +577,10 @@ h2 {
 .release.show {
   transform: translateX(0);
   opacity: 1;
+}
+
+.release-name {
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -685,11 +689,7 @@ h2 {
   right: 10px;
 }
 
-@media screen and (max-width: 600px) {
-  .carousel-container {
-    /* padding: 0 16px; */
-    overflow: scroll;
-  }
+@media screen and (max-width: 600px) { 
 
   .carousel-title {
     padding: 16px;
@@ -715,6 +715,7 @@ h2 {
 }
 
 .contact-container h2 {
+  text-align: center;
   margin-top: 30px;
 }
 
